--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@ body {
   margin: 0;
   padding: 0;
   background-color: white; /* 기본 배경색 */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @font-face {
